# preflight

./: .code-workspace.code-workspace  .gitignore  Cargo.toml  README.md  index.html  justfile  preflight.code-workspace  search-index.js  settings.html  source-files.js
_legacy/roxide/: Cargo.toml
_legacy/roxide/glade/: roxide.glade
_legacy/roxide/src/: util.rs
_legacy/roxide/src/application/: mod.rs  state.rs
anyhow/: struct.Chain.html  struct.Error.html  trait.Context.html
byteorder/: enum.BigEndian.html  enum.LittleEndian.html  trait.ByteOrder.html
cargo_metadata/: all.html  enum.CargoOpt.html  index.html  struct.MetadataCommand.html  struct.Package.html  struct.Source.html  struct.Target.html
cargo_preflight/: Cargo.toml  all.html  fn.load_harness.html  fn.main.html  fn.test_harness.html  index.html  sidebar-items.js
crates/fly/: Cargo.toml
crates/fly/example/: Cargo.toml
crates/fly/example/src/: lib.rs
crates/fly/src/: lib.rs  main.rs
crates/preflight/: Cargo.toml  justfile
crates/preflight/example/: Cargo.toml
crates/preflight/example/src/: lib.rs
crates/preflight/impl/: Cargo.toml
crates/preflight/impl/src/: lib.rs
crates/preflight/impl/tests/ui/: fail-arguments.rs  fail-arguments.stderr  fail-invalid-impl.rs  fail-invalid-impl.stderr  fail-invalid-syntax.rs  fail-invalid-syntax.stderr  fail-wrong-impl.rs  fail-wrong-impl.stderr  pass-example.rs
crates/preflight/macros/: Cargo.toml
crates/preflight/macros/src/: avionics.rs  util.rs
crates/preflight/src/: args.rs  cargo.rs  main.rs  shell.rs
crates/roxide/: Cargo.toml
crates/roxide/glade/: roxide.glade
crates/roxide/src/: application.rs  graph.rs  main.rs  util.rs
crates/roxide/src/simulation/: motor.rs
crates/timescale/: Cargo.toml
crates/timescale/derive/: Cargo.toml  build.rs
crates/timescale/derive/src/: lib.rs  util.rs
crates/timescale/derive/src/derive/: mod.rs  timescale_data.rs  timescale_data_table.rs  timescale_derive.rs
crates/timescale/derive/src/parse/: mod.rs  timescale_data.rs  timescale_data_table.rs
crates/timescale/macros/: Cargo.toml
crates/timescale/macros/src/: lib.rs
crates/timescale/macros/src/derive/: interpolated_data_table.rs
crates/timescale/macros/src/parse/: interpolated_data_table.rs  mod.rs
crates/timescale/src/: lib.rs
csv/: Estes_A8.csv  Estes_B4.csv  Estes_C6.csv  H.csv  README.md
darling/: all.html  index.html  struct.Error.html  trait.FromDeriveInput.html  trait.FromField.html  trait.FromGenericParam.html  trait.FromGenerics.html  trait.FromMeta.html  trait.FromTypeParam.html  trait.FromVariant.html
darling_core/: all.html  index.html  trait.FromDeriveInput.html  trait.FromField.html  trait.FromGenericParam.html  trait.FromGenerics.html  trait.FromMeta.html  trait.FromTypeParam.html  trait.FromVariant.html
darling_macro/: all.html  index.html
data/: 2020-11-07-12-35-11.csv  2020-11-07-12-42-19.csv
dlopen/: all.html  enum.Error.html  index.html  sidebar-items.js
dlopen_derive/: all.html  derive.SymBorApi.html  derive.WrapperApi.html  derive.WrapperMultiApi.html  index.html  sidebar-items.js
example/: Cargo.toml  README.md
example/src/: lib.rs
fields/: Cargo.toml
lerp/: all.html  index.html  struct.LerpIterator.html  trait.Lerp.html  trait.LerpIter.html
lerp_derive/: all.html  derive.Lerp.html  index.html  sidebar-items.js
open/: all.html  fn.that.html  fn.that_in_background.html  fn.with.html  fn.with_in_background.html  index.html
pest_derive/: all.html  derive.Parser.html  index.html
pest_generator/: all.html  fn.derive_parser.html  index.html
pest_meta/: all.html  fn.unwrap_or_report.html  index.html
preflight/: Cargo.toml  all.html  attr.avionics_harness.html  enum.AbortCause.html  enum.Control.html  index.html  sidebar-items.js  struct.Guidance.html  struct.Sensors.html  struct.ThrustVector.html  struct.Vector3.html  trait.Avionics.html  type.Quantity.html
preflight/abi/: index.html  sidebar-items.js  type.AvionicsGuide.html  type.PanicCallback.html  type.SetPanicCallback.html
preflight/impl/: Cargo.toml
preflight/impl/src/: lib.rs
preflight/impl/tests/: ui.rs
preflight/impl/tests/ui/: fail-arguments.rs  fail-arguments.stderr  fail-invalid-impl.rs  fail-invalid-impl.stderr  fail-invalid-syntax.rs  fail-invalid-syntax.stderr  fail-wrong-impl.rs  fail-wrong-impl.stderr  pass-example.rs
preflight/macros/: Cargo.toml
preflight/macros/src/: avionics.rs  lib.rs
preflight/src/: abi.rs  api.rs  args.rs  cargo.rs  harness.rs  lib.rs  main.rs  panic.rs
preflight/tests/: ui.rs
preflight/tests/ui/: fail-arguments.rs  fail-arguments.stderr  fail-invalid-impl.rs  fail-invalid-impl.stderr  fail-invalid-syntax.rs  fail-invalid-syntax.stderr  fail-wrong-impl.rs  fail-wrong-impl.stderr  pass-example.rs
preflight_macros/: Cargo.toml  all.html  attr.avionics_harness.html  index.html  (+1 more)
sim/: Cargo.toml
sim/src/: main.rs
sim/src/simulation/: motor.rs
sim/src/ui/: graph.rs
timescale/: Cargo.toml  all.html  derive.InterpolatedData.html  derive.InterpolatedDataTable.html  derive.Lerp.html  derive.ToTimescale.html  enum.InterpolatedDataPoint.html  index.html  sidebar-items.js  trait.InterpolatedDataTable.html  trait.Lerp.html  trait.ToTimescale.html
timescale/macros/: Cargo.toml
timescale/macros/src/: lib.rs
timescale/macros/src/derive/: interpolated_data.rs  interpolated_data_table.rs  mod.rs
timescale/src/: lib.rs
timescale/tests/ui/: fail-invalid-type.rs  fail-invalid-type.stderr  fail-missing-params.rs  fail-missing-params.stderr  fail-no-file.rs  fail-no-file.stderr  fail-no-type.rs  fail-no-type.stderr  pass-a8.rs  pass-c6.rs
timescale_data/: Cargo.toml
timescale_data/src/: lib.rs
timescale_macros/: Cargo.toml  all.html  derive.InterpolatedData.html  derive.InterpolatedDataTable.html  derive.ToTimescale.html  index.html  sidebar-items.js
timescale_macros/src/: lib.rs  store.rs
timescale_macros/src/derive/: interpolated_data.rs  interpolated_data_table.rs  timescale_derive.rs
timescale_macros/src/parse/: interpolated_data.rs  interpolated_data_table.rs
(+9473 files in other folders)
