[package]
name = "sim"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.23.0", features = ["serde-serialize", "debug"] }
nphysics3d = "0.18.0"
ncollide3d = "0.26.1"
log = "0.4.11"
kiss3d = { version = "0.27.0", features = ["conrod"] }
chrono = "0.4.19"
csv = "1.1.4"
serde = { version = "1.0.117", features = ["derive"] }
paste = "1.0.2"
timescale_data = { path = "./timescale_data" }

[patch.crates-io]
# csv = { branch = "nested-struct-headers", git = "https://github.com/ilya-epifanov/rust-csv" }

[workspace]
members = [".", "timescale_data"]
