[package]
name = "sim"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
csv = "1.1.4"
ctrlc = "3.1.7"
kiss3d = { version = "0.27.0", features = ["conrod"] }
log = "0.4.11"
nalgebra = { version = "0.23.0", features = ["serde-serialize", "debug"] }
ncollide3d = "0.26.1"
nphysics3d = "0.18.0"
paste = "1.0.2"
serde = { version = "1.0.117", features = ["derive"] }
simplelog = "0.8.0"
timescale = { path = "./crates/timescale" }
indoc = "1.0.3"

[workspace]
members = [
    ".",
    "crates/timescale",
    "crates/timescale/derive",
]
