[package]
name = "sim"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
csv = "1.1"
ctrlc = "3.1.7"
kiss3d = { version = "0.28.0", features = ["conrod"] }
log = "0.4.11"
nalgebra = { version = "0.23.1", features = ["serde-serialize", "debug"] }
ncollide3d = "0.26.1"
nphysics3d = "0.18.0"
serde = { version = "1.0.117", features = ["derive"] }
simplelog = "0.8.0"
timescale = { path = "./crates/timescale" }
indoc = "1.0.3"
dialoguer = "0.7.1"
color-eyre = "0.5"

[workspace]
members = [
    "crates/timescale",
    "crates/timescale/macros",
    "crates/preflight",
    "crates/preflight/example",
    "crates/preflight/macros",
    "crates/preflight/impl",
    # "crates/roxide",
]

[profile.release]
lto = "thin"

# Optimization for color-eyre
[profile.dev.package.backtrace]
opt-level = 3
