[package]
name = "cargo-preflight"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
cargo_metadata = "0.12"
dlopen = "0.1"
dlopen_derive = "0.1"
preflight_impl = { path = "./impl" }
structopt = "0.3"
termcolor = "1.1"
textwrap = "0.13"
timescale = { path = "../timescale" }
anyhow = "1.0"
glob = "0.3"