[package]
name = "sim-ui"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
iced = { rev = "1af6fb3ec0e523fa842a3380e77bba1e9940ba0d", git = "https://github.com/hecrj/iced", features = ["async-std", "image"] }
async-std = "1.7.0"
timescale = { path = "../crates/timescale" }
plotters = { rev = "96d51844ea2febc36dae5f07901db54f10b90c08", git = "https://github.com/38/plotters" }
log = "0.4.11"
simplelog = "0.8.0"
plotters-bitmap = "0.3.0"
color-eyre = "0.5.7"