[package]
name = "timescale"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"
description = "A crate to work with timescale data and csv files"

[dependencies]
lerp = { branch = "derive_macro", git = "https://github.com/DusterTheFirst/lerp-rs/", features = ["derive"] }
serde = "1.0"
timescale_macros = { path = "../timescale_macros" }

[dev-dependencies]
trybuild = "1.0"
