[package]
name = "timescale_macros"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
csv = "1.1"
darling = "0.12"
lazy_static = "1.4.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[lib]
proc-macro = true
