[package]
name = "timescale_macros"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
csv = "1.1"
darling = "0.12"
lazy_static = "1.4.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
timescale = { path = "../timescale"}
lerp = { branch = "derive_macro", git = "https://github.com/DusterTheFirst/lerp-rs/", features = ["derive"] }
serde = "1.0"
nalgebra = "0.24"

[lib]
proc-macro = true
