[package]
name = "roxide"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
cairo-rs = "0.9"
color-eyre = "0.5"
ctrlc = "3.1"
dirs = "3.0"
gtk = { version = "0.9", features = ["v3_24"] }
lazy_static = "1.4"
log = "0.4"
plotters = { git = "https://github.com/38/plotters", rev = "96d51844ea2febc36dae5f07901db54f10b90c08" }
plotters-cairo = "0.3"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.8"
timescale = { path = "../timescale" }

[profile.dev.package.backtrace]
opt-level = 3
