[package]
name = "roxide"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
gtk = { version = "0.9", features = ["v3_24"] }
cairo-rs = "0.9"
plotters = "0.3"
plotters-cairo = "0.3"
color-eyre = "0.5.8"
timescale = { path = "../timescale" }
