[package]
name = "roxide"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
gtk = { version = "0.9", features = ["v3_24"] }
cairo-rs = "0.9"
plotters = { git = "https://github.com/38/plotters", rev = "96d51844ea2febc36dae5f07901db54f10b90c08" }
plotters-cairo = "0.3"
color-eyre = "0.5"
timescale = { path = "../timescale" }
ctrlc = "3.1"
dirs = "3.0"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
