[package]
name = "preflight_impl"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
preflight_macros = { path = "../macros" }
no-panic = "0.1"

[dependencies.uom]
# version = "0.30"
git = "https://github.com/iliekturtles/uom"
branch = "227-unwind-safe"
default-features = false
features = ["autoconvert", "f32", "f64", "si"]

[dev-dependencies]
trybuild = "1.0"
