[package]
name = "preflight_impl"
version = "0.1.0"
authors = ["Zachary Kohnen <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
preflight_macros = { path = "../macros" }

[dependencies.uom]
# version = "0.30"
git = "https://github.com/iliekturtles/uom"
rev = "5f31ced35975d05ac8ad80688c47efc906ed2962"
# path = "../../../uom"
default-features = false
features = ["autoconvert", "f32", "f64", "si"]

[dev-dependencies]
trybuild = "1.0"
